[gd_scene load_steps=15 format=3 uid="uid://b7bftk8y4ei4o"]

[ext_resource type="Script" uid="uid://dsggc2d20trgs" path="res://scenes/characters/ball/ball.gd" id="1_iwc44"]
[ext_resource type="Texture2D" uid="uid://kpjeb5td6fem" path="res://assets/art/props/soccer-ball.png" id="1_ndvy6"]
[ext_resource type="Texture2D" uid="uid://dwyynboev0m5l" path="res://assets/art/props/ball-shadow.png" id="2_iwc44"]
[ext_resource type="Texture2D" uid="uid://b3qa8ufkj0cbg" path="res://assets/art/particles/white-circle.png" id="4_rghpu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rghpu"]
radius = 5.0

[sub_resource type="Animation" id="Animation_qltnh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BallSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_iwc44"]
resource_name = "idle"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BallSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_xw8jk"]
resource_name = "roll"
length = 0.2
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BallSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ufsws"]
_data = {
&"RESET": SubResource("Animation_qltnh"),
&"idle": SubResource("Animation_iwc44"),
&"roll": SubResource("Animation_xw8jk")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_sb3m8"]
radius = 4.0

[sub_resource type="Curve" id="Curve_xw8jk"]
_data = [Vector2(0, 0.266667), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_qltnh"]
curve = SubResource("Curve_xw8jk")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ufsws"]
lifetime_randomness = 0.5
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 1.0
scale_min = 0.2
scale_max = 0.4
scale_curve = SubResource("CurveTexture_qltnh")

[sub_resource type="CircleShape2D" id="CircleShape2D_xw8jk"]
radius = 60.0

[node name="Ball" type="AnimatableBody2D"]
process_mode = 3
collision_layer = 4
collision_mask = 33
sync_to_physics = false
script = ExtResource("1_iwc44")
friction_air = 35.0
friction_ground = 250.0

[node name="BallSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("1_ndvy6")
centered = false
offset = Vector2(-5, -10)
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_rghpu")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_ufsws")
}
autoplay = "idle"

[node name="ShadowSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_iwc44")
centered = false
offset = Vector2(-8, -16)

[node name="PlayerDetectionArea" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionArea"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_sb3m8")

[node name="ScoringRaycast" type="RayCast2D" parent="."]
unique_name_in_owner = true
target_position = Vector2(86, 0)
collision_mask = 16
collide_with_areas = true
collide_with_bodies = false

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -8)
emitting = false
amount = 30
texture = ExtResource("4_rghpu")
lifetime = 0.3
process_material = SubResource("ParticleProcessMaterial_ufsws")

[node name="PlayerPromixtyArea" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerPromixtyArea"]
shape = SubResource("CircleShape2D_xw8jk")
